fixed display stretching causing buttons to squish before expanding the container

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ https://www.soundjay.com/button-sounds-1.html
 justify-content -> MAIN */
 body {
     margin: 0;
+    padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,49 +20,59 @@ body {
     background-color: grey;
 }
 
+/*
 .bigger-container {
-    border-radius: 28px;
-    background-color: rgb(0, 0, 0);
-    border: 20px solid black;
+    display:flex;
+    min-height: 450px;
 }
+*/
 
 .container {
     display: flex;
     flex-direction: column;
+    border: 20px solid black;
+    border-radius: 28px;
     width: 400px;
-    height: 450px;
+    min-height: 500px;
+    background-color: black;
+    /*box-sizing: border-box;*/
 }
 
 #display {
+    flex-basis: 200px;
     display: flex;
     justify-content: right;
     align-items: center;
-    font-family: digital-clock-font;
+    flex-grow: 1;
     color: black;
     background-color: hsl(155, 100%, 77%);
-    flex-grow: 7;
-    flex-shrink: 1;
-    font-size: 60px;
-    word-wrap: break-word;
-    word-break: break-all;
-    line-height: 60px;
-    /*prevents line-break 
-    from overlapping*/
+    font-family: digital-clock-font;
     border-bottom: 20px solid black;
     border-radius: 45px;
+    box-sizing: border-box;
+    font-size: 60px;
+    line-height: 60px;
+    word-wrap: break-word;
+    word-break: break-all;
+    /* trying to get a 50-50 #display/.buttons ratio
+    */
 }
 
 .buttons {
-    flex-grow: 7;
     display: flex;
     flex-direction: column;
-
+    flex-grow: 1;
+    box-sizing: border-box;
+    /*1.6 makes bug more apparent)*/
+    /*flex-basis: 300px;*/
+    min-height: 300px;
+    /*flex-shrink: 0;*/
+    /*min-height:  maybe? - band-aid solution*/
 }
 
 .row {
     display: flex;
-    /*justify-content: space-around;*/
-    /*align-items: center;*/
+    justify-content: space-around;
     flex-grow: 1;
     background-color: rgb(245, 245, 245);
 }
@@ -72,10 +83,15 @@ body {
     border-top-right-radius: 18px;
 }
 
+/* disabling button stuff to get 50-50 sizing
+    */
+
 .lastRow {
     border-bottom: 5px solid rgb(245, 245, 245);
     border-bottom-left-radius: 18px;
     border-bottom-right-radius: 18px;
+    /* disabling button stuff to get 50-50 sizing
+    */
 }
 
 
@@ -83,17 +99,19 @@ button {
     margin: 0;
     padding: 0;
     flex-grow: 1;
-    flex-basis: 1px;
-    border: 5px solid rgb(245, 245, 245);
+    flex-basis: 0px;
+    background-color: rgb(187, 187, 187);
     border-radius: 18px;
-    box-sizing: border-box;
     font-size: 30px;
-    background-color: grey;
+    border: 5px solid rgb(245, 245, 245);
     box-shadow: inset 0px -3px black;
+    /* disabling button stuff to get 50-50 sizing
+    box-sizing: border-box;
+    */
 }
 
 button:hover {
-    background-color: rgb(118, 118, 118);
+    background-color: rgb(161, 161, 161);
 }
 
 button:active {
